Update links and add coffee search

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,7 @@
 
 <nav class="nav">
 <a href="index.html">Home</a>
-<a href="coffee.html">Coffee Selection</a>
+<a href="Coffee.html">Coffee Selection</a>
 <a href="Equipment.html">Brewing Equipment</a>
 <a href="Events.html">Events & Workshops</a>
 <a href="Cart.html">Shopping Cart</a>
@@ -46,7 +46,7 @@
 <div class="card">
 <h3>Featured Coffee</h3>
 <p>Premium blends with smooth taste and clean finish.</p>
-<a class="btn" href="coffee.html">View Coffee</a>
+<a class="btn" href="Coffee.html">View Coffee</a>
 </div>
 
 <div class="card">
@@ -144,7 +144,7 @@ allowfullscreen></iframe>
 <h4>Pages</h4>
 <ul class="f-links">
 <li><a href="index.html">Home</a></li>
-<li><a href="coffee.html">Coffee Selection</a></li>
+<li><a href="Coffee.html">Coffee Selection</a></li>
 <li><a href="Equipment.html">Brewing Equipment</a></li>
 <li><a href="Events.html">Events & Workshops</a></li>
 <li><a href="Cart.html">Shopping Cart</a></li>
