--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -16,7 +16,7 @@
 
 <nav class="nav">
 <a href="index.html">Home</a>
-<a href="coffee.html">Coffee Selection</a>
+<a href="Coffee.html">Coffee Selection</a>
 <a href="Equipment.html">Brewing Equipment</a>
 <a href="Events.html">Events & Workshops</a>
 <a href="Cart.html">Shopping Cart</a>
@@ -45,7 +45,7 @@
 </div>
 
 <div class="cart-actions">
-<a class="btn" href="coffee.html">Back to Coffee</a>
+<a class="btn" href="Coffee.html">Back to Coffee</a>
 <a class="btn" href="Equipment.html">Back to Equipment</a>
 </div>
 </section>
@@ -89,7 +89,7 @@ Starter Bundle x1</textarea>
 <h4>Pages</h4>
 <ul class="f-links">
 <li><a href="index.html">Home</a></li>
-<li><a href="coffee.html">Coffee Selection</a></li>
+<li><a href="Coffee.html">Coffee Selection</a></li>
 <li><a href="Equipment.html">Brewing Equipment</a></li>
 <li><a href="Events.html">Events & Workshops</a></li>
 <li><a href="Cart.html">Shopping Cart</a></li>
