--- a/HTML/Coffee.html
+++ b/HTML/Coffee.html
@@ -16,7 +16,7 @@
 
 <nav class="nav">
 <a href="index.html">Home</a>
-<a href="coffee.html">Coffee Selection</a>
+<a href="Coffee.html">Coffee Selection</a>
 <a href="Equipment.html">Brewing Equipment</a>
 <a href="Events.html">Events & Workshops</a>
 <a href="Cart.html">Shopping Cart</a>
@@ -33,7 +33,11 @@
 
 <section class="section">
 <h3>Find Coffee</h3>
-
+<p class="muted">Use the search to quickly find a roast.</p>
+<form class="search-form" action="#" method="get">
+<label for="search">Search by roast or name</label>
+<input id="search" name="search" class="search-box" type="text" placeholder="Example: light, espresso, arabica">
+</form>
 
 </section>
 
@@ -185,7 +189,7 @@ loading="lazy"></iframe>
 <h4>Pages</h4>
 <ul class="f-links">
 <li><a href="index.html">Home</a></li>
-<li><a href="coffee.html">Coffee Selection</a></li>
+<li><a href="Coffee.html">Coffee Selection</a></li>
 <li><a href="Equipment.html">Brewing Equipment</a></li>
 <li><a href="Events.html">Events & Workshops</a></li>
 <li><a href="Cart.html">Shopping Cart</a></li>
