--- a/HTML/Equipment.html
+++ b/HTML/Equipment.html
@@ -16,7 +16,7 @@
 
 <nav class="nav">
 <a href="index.html">Home</a>
-<a href="coffee.html">Coffee Selection</a>
+<a href="Coffee.html">Coffee Selection</a>
 <a href="Equipment.html">Brewing Equipment</a>
 <a href="Events.html">Events & Workshops</a>
 <a href="Cart.html">Shopping Cart</a>
@@ -103,6 +103,7 @@
 <a class="btn addbtn" href="Cart.html">Add to Cart</a>
 </div>
 
+</section>
 
 </main>
 
@@ -117,7 +118,7 @@
 <h4>Pages</h4>
 <ul class="f-links">
 <li><a href="index.html">Home</a></li>
-<li><a href="coffee.html">Coffee Selection</a></li>
+<li><a href="Coffee.html">Coffee Selection</a></li>
 <li><a href="Equipment.html">Brewing Equipment</a></li>
 <li><a href="Events.html">Events & Workshops</a></li>
 <li><a href="Cart.html">Shopping Cart</a></li>
