Add captcha plugin to events form

--- a/HTML/Events.html
+++ b/HTML/Events.html
@@ -102,6 +102,11 @@
 <option value="Meet the Roaster (Talk)">Meet the Roaster (Talk)</option>
 </select>
 
+<div class="captcha-box">
+<p class="muted">Captcha check (hCaptcha plugin)</p>
+<div class="h-captcha" data-sitekey="10000000-ffff-ffff-ffff-000000000001"></div>
+</div>
+
 <button class="btn" type="submit">Submit Registration</button>
 </form>
 
@@ -141,5 +146,6 @@
 </div>
 </footer>
 
+<script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 </body>
 </html>
